--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="calendar_popup_not_intressted">inte Intresserad</string>
     <string name="Calender_dialog_reg_newEvent">Registrera ny Aktivitet</string>
     <string name="registrera_ny_aktvitet">Registrera ny aktvitet</string>
+    <string name="group_name">Group Name</string>
 </resources>
