--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="Calender_dialog_reg_newEvent">Registrera ny Aktivitet</string>
     <string name="registrera_ny_aktvitet">Registrera ny aktvitet</string>
     <string name="group_name">Group Name</string>
+    <string name="starta_ny_grupp">Starta ny grupp</string>
 </resources>
