--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,37 @@
 <resources>
-    <string name="app_name">Grannar</string>
+    <string name="app_name">Neighbors</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="btnLabel_calendar">Kalender</string>
-    <string name="btn_label_calender_previous">Föregående</string>
-    <string name="btn_label_next">Nästa</string>
-    <string name="calendar_label_monday">Mån</string>
-    <string name="calendar_label_thuesday">Tis</string>
-    <string name="calendar_label_wensday">Ons</string>
-    <string name="calendar_label_wendsday">Ons</string>
-    <string name="calendar_label_torsdag">Tor</string>
-    <string name="calendar_label_friday">fredag</string>
-    <string name="calendar_label_saturday">Lör</string>
-    <string name="calendar_label_sunday">Sön</string>
-    <string name="btn_calendar_label_prev_month">Bakåt</string>
-    <string name="btn_label_calender_next_month">Framåt</string>
-    <string name="calendar_label_mandag">Mån</string>
-    <string name="calendar_label_tisdag">Tis</string>
-    <string name="calendar_label_onsdag">Ons</string>
-    <string name="calendar_label_torsda">Tors</string>
-    <string name="calendar_label_fredag">Fre</string>
-    <string name="calendar_label_lordag">Lör</string>
-    <string name="calendar_label_sondag">Sön</string>
-    <string name="calendar_addEvent_button">Lägg till aktvivitet</string>
-    <string name="Caelnder_title_demo">Sön 3 Mars</string>
-    <string name="Calendar_demo_text">Grilla Med Bosse och Måns</string>
-    <string name="calender_popup_title">Event Titel</string>
-    <string name="calender_popup_dateAndTime">Datum: 12/2/2025</string>
-    <string name="calendar_popup_moreinfo">Här Kommer all världens info om eventet</string>
-    <string name="calendar_popup_accept">Deltar</string>
-    <string name="calendar_popup_not_intressted">inte Intresserad</string>
-    <string name="Calender_dialog_reg_newEvent">Registrera ny Aktivitet</string>
-    <string name="registrera_ny_aktvitet">Registrera ny aktvitet</string>
+    <string name="btnLabel_calendar">Calendar</string>
+    <string name="btn_label_calender_previous">Previous</string>
+    <string name="btn_label_next">Next</string>
+    <string name="calendar_label_monday">Mon</string>
+    <string name="calendar_label_thuesday">Tue</string>
+    <string name="calendar_label_wensday">Wed</string>
+    <string name="calendar_label_wendsday">Wed</string>
+    <string name="calendar_label_torsdag">Thu</string>
+    <string name="calendar_label_friday">Fri</string>
+    <string name="calendar_label_saturday">Sat</string>
+    <string name="calendar_label_sunday">Sun</string>
+    <string name="btn_calendar_label_prev_month">Previous</string>
+    <string name="btn_label_calender_next_month">Next</string>
+    <string name="calendar_label_mandag">Mon</string>
+    <string name="calendar_label_tisdag">Tue</string>
+    <string name="calendar_label_onsdag">Wed</string>
+    <string name="calendar_label_torsda">Thu</string>
+    <string name="calendar_label_fredag">Fri</string>
+    <string name="calendar_label_lordag">Sat</string>
+    <string name="calendar_label_sondag">Sun</string>
+    <string name="calendar_addEvent_button">Add activities</string>
+    <string name="Caelnder_title_demo">Sun 3 March</string>
+    <string name="Calendar_demo_text">Grilla with Bosse and Måns</string>
+    <string name="calender_popup_title">Event Title</string>
+    <string name="calender_popup_dateAndTime">Date: 12/2/2025</string>
+    <string name="calendar_popup_moreinfo">Here comes info about the event</string>
+    <string name="calendar_popup_accept">Attending</string>
+    <string name="calendar_popup_not_intressted">Not interested</string>
+    <string name="Calender_dialog_reg_newEvent">Register new Activity</string>
+    <string name="registrera_ny_aktvitet">Register new Activity</string>
     <string name="group_name">Group Name</string>
-    <string name="starta_ny_grupp">Starta ny grupp</string>
+    <string name="starta_ny_grupp">Start a new group</string>
 </resources>
