--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,16 @@
     <string name="calendar_label_sunday">Sun</string>
     <string name="btn_calendar_label_prev_month">Previous</string>
     <string name="btn_label_calender_next_month">Next</string>
-    <string name="calendar_label_mandag">Mån</string>
-    <string name="calendar_label_tisdag">Tis</string>
-    <string name="calendar_label_onsdag">Ons</string>
-    <string name="calendar_label_torsda">Tor</string>
+    <string name="calendar_label_mandag">Mon</string>
+    <string name="calendar_label_tisdag">Tue</string>
+    <string name="calendar_label_onsdag">Wed</string>
+    <string name="calendar_label_torsda">Thu</string>
     <string name="calendar_label_fredag">Fri</string>
-    <string name="calendar_label_lordag">Lör</string>
-    <string name="calendar_label_sondag">Sön</string>
+    <string name="calendar_label_lordag">Sat</string>
+    <string name="calendar_label_sondag">Sun</string>
     <string name="calendar_addEvent_button">Add activities</string>
     <string name="calender_title_demo">Sun 3 March</string>
-    <string name="Calendar_demo_text">Grilla with Bosse and Måns</string>
+    <string name="Calendar_demo_text">BBQ with Bosse and Måns</string>
     <string name="calender_popup_title">Event Title</string>
     <string name="calender_popup_dateAndTime">Date: 12/2/2025</string>
     <string name="calendar_popup_moreinfo">Here comes info about the event</string>
